fixed swagger.json and game controller
