# swagger.json
@@ -1,11 +1,12 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "portfolio-api",
-    "description": "portfolio API",
+    "title": "My API",
+    "description": "Store Api",
     "version": "1.0.0"
   },
   "host": "portfolioapi-gsh3.onrender.com",
+  "basePath": "/",
   "schemes": [
     "https"
   ],
@@ -319,56 +320,40 @@
         }
       },
       "post": {
-        "description": "Create a new game",
-        "consumes": [
-          "multipart/form-data"
-        ],
+        "description": "",
         "parameters": [
           {
-            "name": "gameName",
-            "in": "formData",
-            "type": "string",
-            "description": "The name of the game.",
-            "required": true
-          },
-          {
-            "name": "gameThumbnailPath",
-            "in": "formData",
-            "type": "string",
-            "description": "The path to the game thumbnail image.",
-            "required": true
-          },
-          {
-            "name": "gameAlt",
-            "in": "formData",
-            "type": "string",
-            "description": "The alternative text for the game thumbnail image.",
-            "required": true
-          },
-          {
-            "name": "gameSWFName",
-            "in": "formData",
-            "type": "string",
-            "description": "The SWF file name",
-            "required": true
-          },
-          {
-            "name": "gameSWFFile",
-            "in": "formData",
-            "type": "file",
-            "description": "The SWF file to upload for the game.",
-            "required": true
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "gameName": {
+                  "example": "any"
+                },
+                "gameThumbnailPath": {
+                  "example": "any"
+                },
+                "gameAlt": {
+                  "example": "any"
+                },
+                "gameSWFName": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "201": {
-            "description": "Game created successfully."
+            "description": "Created"
           },
           "500": {
-            "description": "Error creating the game."
+            "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
     "/game/{id}": {
       "get": {
         "description": "",
@@ -391,63 +376,47 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
+      },
       "put": {
-        "description": "Update an existing game",
+        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "type": "string",
-            "description": "The ID of the game to update.",
-            "required": true
+            "required": true,
+            "type": "string"
           },
           {
-            "name": "gameName",
-            "in": "formData",
-            "type": "string",
-            "description": "The name of the game.",
-            "required": true
-          },
-          {
-            "name": "gameThumbnailPath",
-            "in": "formData",
-            "type": "string",
-            "description": "The path to the game thumbnail image.",
-            "required": true
-          },
-          {
-            "name": "gameAlt",
-            "in": "formData",
-            "type": "string",
-            "description": "The alternative text for the game thumbnail image.",
-            "required": true
-          },
-          {
-            "name": "gameSWFName",
-            "in": "formData",
-            "type": "string",
-            "description": "The SWF file name",
-            "required": true
-          },
-          {
-            "name": "gameSWFFile",
-            "in": "formData",
-            "type": "file",
-            "description": "The updated SWF file for the game.",
-            "required": true
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "gameName": {
+                  "example": "any"
+                },
+                "gameThumbnailPath": {
+                  "example": "any"
+                },
+                "gameAlt": {
+                  "example": "any"
+                },
+                "gameSWFName": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "204": {
-            "description": "Game updated successfully."
+            "description": "No Content"
           },
           "500": {
-            "description": "Error updating the game."
+            "description": "Internal Server Error"
           }
         }
-      },      
+      },
       "delete": {
         "description": "",
         "parameters": [
@@ -595,44 +564,6 @@
         "responses": {
           "204": {
             "description": "No Content"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/contact/": {
-      "post": {
-        "tags": ["Contact"],
-        "summary": "Send a contact form submission to your email",
-        "operationId": "sendContactForm",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "contactForm",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string"
-                },
-                "email": {
-                  "type": "string"
-                },
-                "message": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
